[EFL][WK2] Using different cache directory for each WTR process https://bugs.webkit.org/show_bug.cgi?id=91719

Patch by Zoltan Nyul <zoltan.nyul@intel.com> on 2012-07-19
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Make sure we return a valid application cache directory in
WebContextEfl.

* UIProcess/efl/WebContextEfl.cpp:
(WebKit::WebContext::applicationCacheDirectory):

Tools:

The testrunner script may be running multiple processes in
parallel, and it makes appcache tests fail if they are using the same
directory. I modified the EFL's LayoutTestController to use the
DUMPRENDERTREE_TEMP for application cache directory because it's
different for each process.

* WebKitTestRunner/CMakeLists.txt:
* WebKitTestRunner/InjectedBundle/efl/LayoutTestControllerEfl.cpp:
(WTR::LayoutTestController::platformInitialize):

Canonical link: https://commits.webkit.org/109543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123085 268f45cc-cd09-0410-ab3c-d52691b4dbfc